# backend-fastapi-project

./: README.md
an-rest-server/: Dockerfile  README.md  pyproject.toml  uvicorn.conf
an-rest-server/src/: main.py
an-rest-server/src/api/: dependencies.py  routers.py  search_modules.py
an-rest-server/src/api/routes/: category.py  color.py  inventory.py  llm.py  product.py  products.py  search.py  shop.py  shops.py  size.py
an-rest-server/src/core/: config.py  database.py  logging.py
an-rest-server/src/crud/: crud.py  crud_base.py  crud_search.py
an-rest-server/src/db/: base_model.py  db_utils.py  session.py
an-rest-server/src/middlewares/: middleware.py  rate_limit.py
an-rest-server/src/models/: __init__.py  inventory.py  product.py  shop.py
an-rest-server/src/schemas/: __init__.py  base.py  category.py  color.py  inventory.py  llm.py  product.py  search.py  shop.py  size.py
an-rest-server/src/services/: __init__.py  claude_service.py  openai_service.py
