[project]
name = "an-rest-server"
version = "0.1.0"
description = "rest server for an-backend (llm processing, shop and product data)"
authors = [
    {name = "Emil",email = "emil.skorov@campus.tu-berlin.de"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "gunicorn==23.0.0",
    "pydantic-settings==2.8.1",
    "sqlalchemy[async]==2.0.40",
    "asyncpg==0.30.0",
    "SQLAlchemy-Utils==0.41.2",
    "python-multipart==0.0.20",
    "openai==1.72.0",
    "python-dotenv==1.1.0",
    "anthropic==0.49.0",
    "itsdangerous==2.2.0",
    "geoalchemy2==0.17.1",
    "httpx==0.28.1",
    "shapely==2.1.0",
    "psycopg2-binary==2.9.10",
    "prometheus-fastapi-instrumentator==7.1.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
